// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`THR-1644 S1 — createAgentFromMeeting output is pinned across the refactor > seed 2 bonds the same First as before 1`] = `
{
  "agentId": "ind_meeting_10_0",
  "located": [
    {
      "id": "ind_meeting_10_0_located_at_loc_village",
      "target": "loc_village",
    },
  ],
  "node": {
    "name": "Ashara",
    "properties": {
      "actorType": "individual",
      "appearanceSeed": 1093135742,
      "axiologicalProfile": {
        "asceticism_extravagance": -0.022386610507965088,
        "courage_prudence": -0.7649135205894709,
        "honesty_cunning": -0.7234593652188779,
        "loyalty_ambition": -0.5306713435798884,
        "mercy_ruthlessness": -0.13562909960746766,
        "preservation_transformation": 0.07402101308107378,
        "revelation_discretion": 0.6500373538583517,
        "sacrifice_survival": 0.3455426778644324,
        "tradition_novelty": -0.022502194344997395,
      },
      "cooperationStrategy": "pavlov",
      "createdByMeeting": true,
      "domainCapabilities": {
        "eye": 5,
        "gold": 5,
        "heart": 35,
        "iron": 32,
        "shadow": 13,
        "star": 30,
        "stone": 3,
        "veil": 14,
      },
      "flavorChoices": null,
      "gender": "female",
      "locationId": "loc_village",
      "narrativeArchetype": "Martyr",
      "narrativeDescriptors": [
        "fire_starter",
        "voice_of_the_people",
        "waiting_to_be_fooled",
      ],
      "portraitAssetPath": "/assets/meeting/candidates/heart-martyr.jpg",
      "primaryReach": "heart",
      "quintessence": 0.96,
      "reputationScore": 0.5,
      "secondaryReach": "star",
      "sphere": "spirit",
    },
    "type": "actor",
  },
  "thread": {
    "id": "edge_thread_asc_ind_meeting_10_0",
    "properties": {
      "attentionMode": "pause",
      "awareness": "faith",
      "beatHistory": [],
      "bondReception": "doubt",
      "courtPosition": "the_first",
      "establishedTick": 10,
      "maintenanceCurrent": true,
      "meetingChoiceRecord": {
        "archetypeId": "Martyr",
        "ascendantSphere": "life",
        "bondReception": "doubt",
        "candidateIndex": 0,
        "dilemmaChoices": [],
        "encounterTick": 10,
        "formativeOutcomes": [
          {
            "band": "success",
            "baseForecastTier": "perilous",
            "essenceSpent": 0,
            "handForecastTier": "perilous",
            "netLean": "a",
            "playedNudgeIds": [
              "ax-iron-03-doorway",
            ],
            "prose": "{agent.name} takes the children first, one under each arm, and comes back for the mother. Three out, and the roof goes down on the fourth trip before {agent.name} is more than a step inside. The mother does not blame {agent.name}, and says so, repeatedly, for weeks. That is the part that stays.",
            "quintessenceErosion": 0,
            "shift": 0.3,
            "templateId": "AX-IRON-03",
            "testIndex": 0,
            "valuePair": "mercy_ruthlessness",
            "writtenPole": "a",
          },
          {
            "band": "failure",
            "baseForecastTier": "uncertain",
            "essenceSpent": 0,
            "handForecastTier": "favorable",
            "netLean": "a",
            "playedNudgeIds": [
              "ax-veil-03-fit",
            ],
            "prose": "{agent.name} means to refit and works at it for eleven days, and on the eleventh a seated piece splits along a flaw that was always in it. The new stone is ordered that afternoon, in temper. It is a better shrine and {agent.name} never quite says so out loud.",
            "quintessenceErosion": 0.04,
            "shift": -0.2,
            "templateId": "AX-VEIL-03",
            "testIndex": 1,
            "valuePair": "tradition_novelty",
            "writtenPole": "b",
          },
        ],
        "foundingGateTags": [],
        "locationId": "loc_village",
        "sparkVisionId": "vision.heart.revolutionary",
      },
      "readBackstoryTier": 0,
      "storyPhase": "call",
      "ticksAtCurrentTier": 0,
      "tier": 1,
      "totalEssenceSpent": 0,
    },
  },
}
`;

exports[`THR-1644 S1 — createAgentFromMeeting output is pinned across the refactor > seed 42 bonds the same First as before 1`] = `
{
  "agentId": "ind_meeting_10_0",
  "located": [
    {
      "id": "ind_meeting_10_0_located_at_loc_village",
      "target": "loc_village",
    },
  ],
  "node": {
    "name": "Mirael",
    "properties": {
      "actorType": "individual",
      "appearanceSeed": 362729021,
      "axiologicalProfile": {
        "asceticism_extravagance": -0.15549105703830723,
        "courage_prudence": 0.05797249786555764,
        "honesty_cunning": -0.3289620351046324,
        "loyalty_ambition": -0.022881079092621825,
        "mercy_ruthlessness": 0.03275602795183663,
        "preservation_transformation": 0.3300592198967933,
        "revelation_discretion": -0.5461279660463334,
        "sacrifice_survival": -0.14779984988272188,
        "tradition_novelty": -0.6620153807103635,
      },
      "cooperationStrategy": "tit-for-tat",
      "createdByMeeting": true,
      "domainCapabilities": {
        "eye": 22,
        "gold": 15,
        "heart": 37,
        "iron": 25,
        "shadow": 17,
        "star": 17,
        "stone": 16,
        "veil": 10,
      },
      "flavorChoices": null,
      "gender": "female",
      "locationId": "loc_village",
      "narrativeArchetype": "Counselor",
      "narrativeDescriptors": [
        "fire_starter",
        "voice_of_the_people",
        "waiting_to_be_fooled",
      ],
      "portraitAssetPath": "/assets/meeting/candidates/heart-counselor.jpg",
      "primaryReach": "heart",
      "quintessence": 0.88,
      "reputationScore": 0.5,
      "secondaryReach": "eye",
      "sphere": "life",
    },
    "type": "actor",
  },
  "thread": {
    "id": "edge_thread_asc_ind_meeting_10_0",
    "properties": {
      "attentionMode": "pause",
      "awareness": "faith",
      "beatHistory": [],
      "bondReception": "doubt",
      "courtPosition": "the_first",
      "establishedTick": 10,
      "maintenanceCurrent": true,
      "meetingChoiceRecord": {
        "archetypeId": "Counselor",
        "ascendantSphere": "life",
        "bondReception": "doubt",
        "candidateIndex": 0,
        "dilemmaChoices": [],
        "encounterTick": 10,
        "formativeOutcomes": [
          {
            "band": "failure",
            "baseForecastTier": "doomed",
            "essenceSpent": 0,
            "handForecastTier": "perilous",
            "netLean": "a",
            "playedNudgeIds": [
              "rc-iron-04-crowd",
            ],
            "prose": "{agent.name} goes forward at the opening and the challenger is not where he was. The next thing available is a step back, and then another, and the fight becomes the patient one by default. It works. {agent.name} accepts the congratulations of people describing a strategy that was actually a stumble.",
            "quintessenceErosion": 0.04,
            "shift": -0.2,
            "templateId": "RC-IRON-04",
            "testIndex": 0,
            "valuePair": "courage_prudence",
            "writtenPole": "b",
          },
          {
            "band": "critical_failure",
            "baseForecastTier": "perilous",
            "essenceSpent": 0,
            "handForecastTier": "perilous",
            "netLean": "a",
            "playedNudgeIds": [
              "rc-iron-03-lull",
            ],
            "prose": "{agent.name} is up and moving forward when the leader's cry lands, and the forward motion turns into a turn. The patrol reads it as an order and pulls back in good order. {agent.name} spends the walk out unable to say whether that was judgement or flinching, and never does settle it.",
            "quintessenceErosion": 0.08,
            "shift": -0.35,
            "templateId": "RC-IRON-03",
            "testIndex": 1,
            "valuePair": "courage_prudence",
            "writtenPole": "b",
          },
        ],
        "foundingGateTags": [],
        "locationId": "loc_village",
        "sparkVisionId": "vision.heart.revolutionary",
      },
      "readBackstoryTier": 0,
      "storyPhase": "call",
      "ticksAtCurrentTier": 0,
      "tier": 1,
      "totalEssenceSpent": 0,
    },
  },
}
`;

exports[`THR-1644 S1 — createAgentFromMeeting output is pinned across the refactor > seed 99 bonds the same First as before 1`] = `
{
  "agentId": "ind_meeting_10_0",
  "located": [
    {
      "id": "ind_meeting_10_0_located_at_loc_village",
      "target": "loc_village",
    },
  ],
  "node": {
    "name": "Orrin",
    "properties": {
      "actorType": "individual",
      "appearanceSeed": 1066195460,
      "axiologicalProfile": {
        "asceticism_extravagance": -0.3855909932404757,
        "courage_prudence": 0.07634672261774544,
        "honesty_cunning": -0.601732624322176,
        "loyalty_ambition": 0.5663637463003397,
        "mercy_ruthlessness": -0.069456959888339,
        "preservation_transformation": -0.4248163882642985,
        "revelation_discretion": -0.002620901167392775,
        "sacrifice_survival": -0.36947711668908595,
        "tradition_novelty": 0.47671099230647096,
      },
      "cooperationStrategy": "always-defect",
      "createdByMeeting": true,
      "domainCapabilities": {
        "eye": 10,
        "gold": 40,
        "heart": 2,
        "iron": 12,
        "shadow": 8,
        "star": 17,
        "stone": 43,
        "veil": 15,
      },
      "flavorChoices": null,
      "gender": "male",
      "locationId": "loc_village",
      "narrativeArchetype": "Mason",
      "narrativeDescriptors": [
        "earth_listener",
        "city_shaper",
        "gave_the_answer_first",
      ],
      "portraitAssetPath": "/assets/meeting/candidates/stone-mason.jpg",
      "primaryReach": "stone",
      "quintessence": 0.96,
      "reputationScore": 0.5,
      "secondaryReach": "gold",
      "sphere": "time",
    },
    "type": "actor",
  },
  "thread": {
    "id": "edge_thread_asc_ind_meeting_10_0",
    "properties": {
      "attentionMode": "pause",
      "awareness": "faith",
      "beatHistory": [],
      "bondReception": "devotion",
      "courtPosition": "the_first",
      "establishedTick": 10,
      "maintenanceCurrent": true,
      "meetingChoiceRecord": {
        "archetypeId": "Mason",
        "ascendantSphere": "life",
        "bondReception": "devotion",
        "candidateIndex": 0,
        "dilemmaChoices": [],
        "encounterTick": 10,
        "formativeOutcomes": [
          {
            "band": "failure",
            "baseForecastTier": "uncertain",
            "essenceSpent": 0,
            "handForecastTier": "uncertain",
            "netLean": "a",
            "playedNudgeIds": [
              "ax-star-01-twelve",
            ],
            "prose": "{agent.name} steps forward and the foreman puts a hand flat on {agent.name}'s chest and says, without any drama, that there is nobody else up here who can run this. It is true. {agent.name} stays. The next four hours are the ones {agent.name} will be thanked for, and the four names are the ones {agent.name} will actually remember.",
            "quintessenceErosion": 0.04,
            "shift": -0.2,
            "templateId": "AX-STAR-01",
            "testIndex": 0,
            "valuePair": "sacrifice_survival",
            "writtenPole": "b",
          },
          {
            "band": "success",
            "baseForecastTier": "perilous",
            "essenceSpent": 0,
            "handForecastTier": "uncertain",
            "netLean": "a",
            "playedNudgeIds": [
              "rc-eye-03-hill",
            ],
            "prose": "{agent.name} cracks just enough of the notation to keep going, and then keeps going. Every clear night, the hill. The old observations and the new ones become one record with no seam in it. Years later the pattern the astronomer died halfway through tracking closes, and {agent.name} writes the last line of a sentence somebody else started.",
            "quintessenceErosion": 0,
            "shift": 0.3,
            "templateId": "RC-EYE-03",
            "testIndex": 1,
            "valuePair": "preservation_transformation",
            "writtenPole": "a",
          },
        ],
        "foundingGateTags": [],
        "locationId": "loc_village",
        "sparkVisionId": "vision.stone.architect",
      },
      "readBackstoryTier": 0,
      "storyPhase": "call",
      "ticksAtCurrentTier": 0,
      "tier": 1,
      "totalEssenceSpent": 0,
    },
  },
}
`;
